--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@pahul100/monitor-lizard-common": "^1.0.1",
+    "@pahul100/monitor-lizard-common": "^1.2.0",
+    "@types/crypto-js": "^4.2.2",
     "axios": "^1.7.8",
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
