--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,13 @@
 FROM node:20-alpine
 
-COPY . .
+COPY package* .
+COPY prisma/ .
 
 RUN npm install
-RUN npm run build
 RUN npx prisma generate
+
+COPY . .
+
+RUN npm run build
 
 CMD ["node", "dist/index.js"]
