--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,7 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2",
-    "zod": "^3.23.8"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
