--- a/.github/workflows/deploy_functions.yaml
+++ b/.github/workflows/deploy_functions.yaml
@@ -29,7 +29,7 @@ jobs:
 
      - name: Set CRON Schedule
        run: |
-        sed -i "s|@app.timer_trigger(schedule=\"[^\"]*\"/@app.timer_trigger(schedule=\"${{ matrix.cron }}\"|g" IntervalFunction/function_app.py
+        sed -i "s|@app.timer_trigger(schedule=\"[^\"]*\"|@app.timer_trigger(schedule=\"${{ matrix.cron }}\"|g" IntervalFunction/function_app.py
 
      - name: Deploy to Azure Function App
        env:
