--- a/.github/workflows/deploy_functions.yaml
+++ b/.github/workflows/deploy_functions.yaml
@@ -15,21 +15,32 @@ jobs:
 
     steps:
      - name: Checkout code
-       uses: actions/checkout@v3
+       uses: actions/checkout@v4
 
      - name: Set up Python
        uses: actions/setup-python@v4
        with:
-        python-version: '3.9'
+        python-version: '3.12'
 
      - name: Install dependencies
        run: |
          python -m pip install --upgrade pip
-         pip install -r IntervalFunction/requirements.txt
+         pip install -r IntervalFunction/requirements.txt --target=".python_packages/lib/site-packages"
 
      - name: Set CRON Schedule
        run: |
         sed -i "s|@app.timer_trigger(schedule=\"[^\"]*\"|@app.timer_trigger(schedule=\"${{ matrix.cron }}\"|g" IntervalFunction/function_app.py
+
+
+     - name: Install Azure Functions Core Tools
+       run: |
+        sudo apt-get update
+        sudo apt-get install -y apt-transport-https
+        curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
+        sudo mv microsoft.gpg /etc/apt/trusted.gpg.d/microsoft.gpg
+        echo "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/azure-cli.list
+        sudo apt-get update
+        sudo apt-get install azure-functions-core-tools-4
 
      - name: Deploy to Azure Function App
        env:
