--- a/.github/workflows/deploy_functions.yaml
+++ b/.github/workflows/deploy_functions.yaml
@@ -6,34 +6,11 @@ on:
       - 'IntervalFunction/**'
 
 jobs:
-  deploy:
+  setup-tools:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        app_name: [mlIntervalfunctionsss, mlIntervalfunctionsss2, mlIntervalfunctionsss3]
-        cron: ["0 0/15 * * * *", "5 0/15 * * * *", "10 0/15 * * * *"]
-
     steps:
-     - name: Checkout code
-       uses: actions/checkout@v4
-
-     - name: Set up Python
-       uses: actions/setup-python@v4
-       with:
-        python-version: '3.12'
-
-     - name: Install dependencies
-       run: |
-         python -m pip install --upgrade pip
-         pip install -r IntervalFunction/requirements.txt --target=".python_packages/lib/site-packages"
-
-     - name: Set CRON Schedule
-       run: |
-        sed -i "s|@app.timer_trigger(schedule=\"[^\"]*\"|@app.timer_trigger(schedule=\"${{ matrix.cron }}\"|g" IntervalFunction/function_app.py
-
-
-     - name: Install Azure Functions Core Tools
-       run: |
+    - name: Install Azure Functions Core Tools
+      run: |
         sudo apt-get update
         sudo apt-get install -y apt-transport-https
         curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
@@ -42,23 +19,39 @@ jobs:
         sudo apt-get update
         sudo apt-get install azure-functions-core-tools-4
 
-     - name: Deploy to Azure Function App
-       env:
-            PUBLISH_PROFILE: ${{ secrets.FUNCTIONAPP_PUBLISH_PROFILE_mlIntervalfunctionsss }}
-       if: ${{ matrix.app_name == 'mlIntervalfunctionsss' }}
-       run: |
-            func azure functionapp publish mlIntervalfunctionsss --publish-profile "$PUBLISH_PROFILE"
+  deploy:
+    needs: setup-tools  # Ensures the tools are installed before this job starts
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        app_name: [mlIntervalfunctionsss, mlIntervalfunctionsss2, mlIntervalfunctionsss3]
+        cron: ["0 0/15 * * * *", "5 0/15 * * * *", "10 0/15 * * * *"]
 
-     - name: Deploy to Azure Function App
-       env:
-        PUBLISH_PROFILE: ${{ secrets.FUNCTIONAPP_PUBLISH_PROFILE_mlIntervalfunctionsss2 }}
-       if: ${{ matrix.app_name == 'mlIntervalfunctionsss2' }}
-       run: |
-        func azure functionapp publish mlIntervalfunctionsss2 --publish-profile "$PUBLISH_PROFILE"
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-     - name: Deploy to Azure Function App
-       env:
-        PUBLISH_PROFILE: ${{ secrets.FUNCTIONAPP_PUBLISH_PROFILE_mlIntervalfunctionsss3 }}
-       if: ${{ matrix.app_name == 'mlIntervalfunctionsss3' }}
-       run: |
-        func azure functionapp publish mlIntervalfunctionsss3 --publish-profile "$PUBLISH_PROFILE"
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r IntervalFunction/requirements.txt
+
+    - name: Set CRON Schedule
+      run: |
+        sed -i "s|@app.timer_trigger(schedule=\"[^\"]*\"|@app.timer_trigger(schedule=\"${{ matrix.cron }}\"|g" IntervalFunction/function_app.py
+
+    - name: Verify Azure Functions Core Tools Installation
+      run: func --version
+
+    - name: Deploy to Azure Function App
+      env:
+        PUBLISH_PROFILE: ${{ secrets.FUNCTIONAPP_PUBLISH_PROFILE_${{ matrix.app_name }} }}
+      run: |
+        pushd './IntervalFunction'
+        func azure functionapp publish ${{ matrix.app_name }} --publish-profile "$PUBLISH_PROFILE"
+        popd
