--- a/.github/workflows/deploy_functions.yaml
+++ b/.github/workflows/deploy_functions.yaml
@@ -8,10 +8,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        app_name: [mlIntervalfunctionsss, mlIntervalfunctionsss2, mlIntervalfunctionsss3]
-        cron: ["0 0/15 * * * *", "5 0/15 * * * *", "10 0/15 * * * *"]
 
     steps:
     - name: Checkout code
@@ -22,36 +18,37 @@ jobs:
       with:
         python-version: '3.12'
 
-    - name: Install Azure Functions Core Tools
-      run: |
-        sudo apt-get update
-        sudo apt-get install azure-functions-core-tools-4
-  
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r IntervalFunction/requirements.txt
+    
+    - name: 'Run Azure Functions Action 1'
+      uses: Azure/functions-action@v1
+      id: fa1
+      with:
+        app-name: mlIntervalfunctionsss
+        package: "IntervalFunctions/Function1"
+        publish-profile: ${{ secrets.FUNCTIONAPP_PUBLISH_PROFILE_mlIntervalfunctionsss }} 
+        scm-do-build-during-deployment: true
+        enable-oryx-build: true
 
-    - name: Set CRON Schedule
-      run: |
-        sed -i "s|@app.timer_trigger(schedule=\"[^\"]*\"|@app.timer_trigger(schedule=\"${{ matrix.cron }}\"|g" IntervalFunction/function_app.py
+    - name: 'Run Azure Functions Action 2'
+      uses: Azure/functions-action@v1
+      id: fa2
+      with:
+        app-name: mlIntervalfunctionsss2
+        package: "IntervalFunctions/Function2"
+        publish-profile: ${{ secrets.FUNCTIONAPP_PUBLISH_PROFILE_mlIntervalfunctionsss2 }} 
+        scm-do-build-during-deployment: true
+        enable-oryx-build: true
 
-    - name: Verify Azure Functions Core Tools Installation
-      run: func --version
-
-    - name: Set PUBLISH_PROFILE based on app_name
-      id: set-secrets
-      run: |
-        if [[ "${{ matrix.app_name }}" == "mlIntervalfunctionsss" ]]; then
-          echo "PUBLISH_PROFILE=${{ secrets.FUNCTIONAPP_PUBLISH_PROFILE_mlIntervalfunctionsss }}" >> $GITHUB_ENV
-        elif [[ "${{ matrix.app_name }}" == "mlIntervalfunctionsss2" ]]; then
-          echo "PUBLISH_PROFILE=${{ secrets.FUNCTIONAPP_PUBLISH_PROFILE_mlIntervalfunctionsss2 }}" >> $GITHUB_ENV
-        elif [[ "${{ matrix.app_name }}" == "mlIntervalfunctionsss3" ]]; then
-          echo "PUBLISH_PROFILE=${{ secrets.FUNCTIONAPP_PUBLISH_PROFILE_mlIntervalfunctionsss3 }}" >> $GITHUB_ENV
-        fi
-
-    - name: Deploy to Azure Function App
-      run: |
-        pushd './IntervalFunction'
-        func azure functionapp publish ${{ matrix.app_name }} --publish-profile "$PUBLISH_PROFILE"
-        popd
+    - name: 'Run Azure Functions Action 3'
+      uses: Azure/functions-action@v1
+      id: fa3
+      with:
+        app-name: mlIntervalfunctionsss3
+        package: "IntervalFunctions/Function3"
+        publish-profile: ${{ secrets.FUNCTIONAPP_PUBLISH_PROFILE_mlIntervalfunctionsss3 }} 
+        scm-do-build-during-deployment: true
+        enable-oryx-build: true
